fixed styling on about for videos overflowing when in landscape in tablet

--- a/style-hobbies.css
+++ b/style-hobbies.css
@@ -38,6 +38,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
+    flex-wrap: wrap;
     gap: 50px;
 }
 
@@ -84,10 +85,6 @@
 
     #portrait {
         padding: 6px;
-    }
-
-    #hobby-videos {
-        flex-wrap: wrap;
     }
 
 }
